--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p title="this is paragraph"> السلام عليكم</p>
+p title="this is paragraph"> السلام عليكم</p>
 <p> معكم أسماء عليان خليف ، من قرى محافظة قلقيلية </p>
 <p> خريجة محاسبة عام 2023 جامعة القدس المفتوحة فرع قلقيلية </p>
 <p> وبطمح بإذن الله بأن أكون مبرمجة ناجحة</p>
@@ -7,4 +7,6 @@
  width="200px"
  alt="صورة تخرج" 
   title="this is image"/>
+
+  <a></a>
   
