--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@ p title="this is paragraph"> السلام عليكم</p>
  alt="صورة تخرج" 
   title="this is image"/>
 
-  <a></a>
+  <a href="index.html"> login index</a>
+  <a href="contact.html"> login contact</a>
+  
   
